Backwards compatible fix for sub paths in ExistsConstraint
Fixes #40