@@ -42,7 +42,7 @@ public class AnyConstraint implements Constraint {
         var list = constraints.stream().distinct().collect(toList());
         return switch (list.size()) {
             case 0 -> NoOpConstraint.instance;
-            case 1 -> list.get(0);
+            case 1 -> list.getFirst();
             default -> new AnyConstraint(list);
         };
     }
